<resources>
    <string name="app_name">Codeca</string>
    <string name="ajudar">O que Podemos Ajudar?</string>
    <string name="nova">Nova Solicitação</string>
    <string name="consultar">Consultar Solicitações</string>
    <string name="edit_usuario">Usuário</string>
    <string name="edit_senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="contanova">Não tenho uma conta ainda?</string>
    <string name="cadastrar">Cadastrar-se</string>
    <string name="text_ou">ou</string>
    <string name="facasolicitacao">Faça sua Solicitação</string>
    <string name="nome">Nome Completo:</string>
    <string name="email">E-mail:</string>
    <string name="senha">Senha:</string>
    <string name="cpf">CPF:</string>
    <string name="Celular">Celular:</string>
    <string name="facacadastro">Faça seu Cadastro:</string>
    <string name="tiposervico">     Selecione o tipo de serviço:</string>
    <string name="localizacao">     Selecione a sua localização:</string>
    <string name="enviarfoto">      Enviar foto relacionado a solicitação:</string>
    <string name="observacoes">     Observações Finais:</string>
    <string name="enviar">Enviar a solicitação</string>
    <string name="CEP">Informe o CEP:</string>
    <string name="buscarcep">Consultar CEP</string>
    <string name="resultadocep">Resultado do CEP: </string>
    <string name="consulte">Consulte suas Solicitações</string>
    <string name="numerodasol">Número</string>
    <string name="datadasol">Data do Agendamento</string>
    <string name="statusdasol">Status</string>
    <string name="editarsol">Editar</string>
    <string name="salvarsol">Salvar</string>


</resources>