<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/background"
    tools:context=".NovaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imgSlogan"
            android:layout_width="wrap_content"
            android:layout_height="197dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/slogan" />

        <TextView
            android:id="@+id/txtfaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/facasolicitacao"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTiposervico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/tiposervico"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Spinner
            android:id="@+id/tiposdeservico"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txtLocalizacao"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/localizacao"
            android:textColor="#000000"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="193dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txtou2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:text="@string/text_ou"
                android:textColor="#050505" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtxtCep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:hint="Informe o CEP"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnCEP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/buscarcep"
                    android:textSize="10sp"
                    android:typeface="normal" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/resultadocep"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtenviarfoto"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:text="@string/enviarfoto"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AQUI VAI A FOTO"
            android:gravity="center"/>

        <TextView
            android:id="@+id/txtObservacoes"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/observacoes"
            android:textColor="#000000"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            style='@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:marqueeRepeatLimit="300"
            app:counterEnabled="true"
            app:counterMaxLength="300"

            app:helperText="Caracteres Restantes:">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:maxLength="300" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnEnviarSol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/enviar"

                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>