<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".SolicitacaoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/imgSlogan"
            android:layout_width="wrap_content"
            android:layout_height="268dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/slogan"
            />

        <TextView
            android:id="@+id/txtvAjudar"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/ajudar"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnNova"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nova"
                android:typeface="normal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="30dp"/>

            <Button
                android:id="@+id/btnConsultar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/consultar"
                android:typeface="normal" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>